src/style.scss
@mixin light-theme {
  --c-fg: #29303d;
  --c-bg: #f4f6fb;
  --c-bg-alt: #ffffff;
  --c-accent: #4488ff;
  --c-input: #a3b1cc;
  --c-input-alt: #dfe3ed;
  --c-label: #59667f;
}

@mixin dark-theme {
  --c-fg: #f4f7fa;
  --c-bg: #171923;
  --c-bg-alt: #20222c;
  --c-input: #4d5266;
  --c-input-alt: #2b2e3b;
  --c-label: #8f96ac;
}

:root,
.root {
  // [s]pace
  --s-xl: 32px;
  --s-lg: 24px;
  --s-md: 16px;
  --s-sm: 8px;
  --s-xs: 4px;

  --rounded: 8px;
  --rounded-sm: 4px;

  --outline: 2px solid var(--c-accent);

  @include light-theme;

  @media (prefers-color-scheme: dark) {
    @include dark-theme;
  }

  &[data-theme='light'] {
    @include light-theme;
  }

  &[data-theme='dark'] {
    @include dark-theme;
  }
}

::selection {
  background: var(--c-label);
  color: var(--c-bg);
}

::-webkit-scrollbar {
  width: 8px;
  height: 8px;
  background: var(--c-input-alt);

  &-thumb {
    background: var(--c-input);

    &:active {
      background: var(--c-label);
    }
  }
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;

  &:focus-visible,
  .outline {
    outline: var(--outline);
  }

  &:focus-visible.no-outline {
    outline: none;
  }
}

body,
:host .root {
  color: var(--c-fg);
  background: var(--c-bg);
  font-family: 'Inter', system-ui, sans-serif;
}

button,
input,
textarea,
select {
  color: inherit;
  background: none;
  border: none;
  font: inherit;
}

input,
textarea {
  &::placeholder {
    color: var(--c-input);
    user-select: none;
  }
}

button,
select {
  cursor: pointer;
}

.input {
  background: var(--c-bg-alt);
  border: 1px solid var(--c-input-alt);
  border-radius: var(--rounded);
}

.icon {
  height: 1em;
  width: 1em;
}

